Update for current version of NodeBB

--- a/less/style.less
+++ b/less/style.less
@@ -1,10 +1,15 @@
 .trophies-item {
     min-height: 50px;
     background-repeat: no-repeat;
-    padding-left: 50px;
     line-height: 50px;
     display: block;
     width: 100%;
+}
+
+.trophies-item-img {
+    vertical-align: middle;
+    width: 44px;
+    height: 44px;
 }
 
 .trophies-item-name {
@@ -23,8 +28,15 @@
 .trophy-item {
     min-height: 50px;
     background-repeat: no-repeat !important;
-    padding-top: 50px;
     display: inline-block;
     background-position-x: center !important;
     margin: 10px;
+}
+
+.trophy-img {
+    display: block;
+    width: 44px;
+    height: 44px;
+    margin: 0 auto;
+    margin-bottom: 6px;
 }
