--- a/less/style.less
+++ b/less/style.less
@@ -10,6 +10,7 @@
     vertical-align: middle;
     width: 44px;
     height: 44px;
+    object-fit: contain;
 }
 
 .trophies-item-name {
@@ -39,4 +40,5 @@
     height: 44px;
     margin: 0 auto;
     margin-bottom: 6px;
+    object-fit: contain;
 }
